--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
   "devDependencies": {
     "@cloudflare/vitest-pool-workers": "^0.4.5",
     "@cloudflare/workers-types": "^4.20240806.0",
+    "@cordisjs/eslint-config": "^1.1.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.1",
+    "@typescript-eslint/parser": "^8.0.1",
+    "eslint": "^8.57.0",
     "typescript": "^5.5.2",
     "vitest": "1.5.0",
     "wrangler": "^3.60.3"
-  }
+  },
+  "packageManager": "yarn@4.4.0"
 }
