--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,6 +4,8 @@ main = "src/index.ts"
 compatibility_date = "2024-08-06"
 compatibility_flags = ["nodejs_compat"]
 
+account_id = "f8613bce396072d463c7a695afed5301"
+
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
 # rather than the end user may result in better performance.
