--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -2,3 +2,13 @@ semi: false
 singleQuote: true
 trailingComma: all
 printWidth: 88
+
+plugins:
+  - '@trivago/prettier-plugin-sort-imports'
+
+importOrder:
+  - '^node:(.*)$' # builtin
+  - '^(@[^\/]|[^\.@])(.*)$' # external
+  - '.*' # local
+importOrderSeparation: true
+importOrderSortSpecifiers: true
